--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     
     <div class="mode">
-        <i class="fa-solid fa-sun"></i>
+        <i class="bi-moon" id="toggleDark"></i>
     </div>
 
     <main class="calculator" id="calculator">
